test/corpus/comment.txt
================================================================================
Top Level Comment
================================================================================

# This is a comment at the top
fields @timestamp

--------------------------------------------------------------------------------

(query
  (comment)
  (fields_command
    (field_name)))

================================================================================
Inline Comment
================================================================================

fields @timestamp # This is an inline comment

--------------------------------------------------------------------------------

(query
  (fields_command
    (field_name))
  (comment))

================================================================================
Block Comment
================================================================================

# Not really a block comment
# But wanted to give this a little test aswell
fields @timestamp
# Footer

--------------------------------------------------------------------------------

(query
  (comment)
  (comment)
  (fields_command
    (field_name))
  (comment))
